# pysparta

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  clean.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ipython/: history.sqlite
.ipython/startup/: 00_import.py
dev/: testdev.py
pysparta/: __init__.py  benchmark_models.py  core.py  interface.py  model.py  sandbox.py  utils.py
pysparta/atmoslib/: __init__.py  dataio.py  filters.py  merra2_lta.py  sandbox.py
pysparta/atmoslib/merra2_lta_data/: pwater.bl2
pysparta/data/: __init__.py  asite_merra2_2022_hourly.csv  io.py  merra2.py  merra2_local.py  merra2_remote.py
pysparta/data/merra2_lta/: albedo.bl2  alpha.bl2  elevation.bl2  ssa.bl2
pysparta/models/: bird.py  pysparta.py  sparta.py
pysparta/modlib/: bird.py
scripts/: aenet_merra2_data.parquet  merra2_local_database.ipynb  prepare_test_database.py
sparta/: __init__.py  utils.py
sparta/models/: pysparta.py
sparta/scripts/: prepare_test_database.py
src/pysparta/: __init__.py  benchmark.py
src/pysparta/atmoslib/: _base.py  export.py  interpolate.py  merra2_cda.py  merra2_lta.py
src/pysparta/atmoslib/merra2_lta_data/: beta.bl2  metadata.json  ozone.bl2  pressure.bl2
src/pysparta/modlib/: __init__.py  sandbox.py  sparta.py
