[metadata]
name = pysparta
version = 0.0.1
description = Solar PArameterization for the Radiative Transfer of the Atmosphere
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
long_description = file: README.md
long_description_content_type = text/x-markdown
license = MIT
url = https://github.com/jararias/pysparta
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.9