[metadata]
name = pysparta
version = 0.1.0
description = Solar PArameterization for the Radiative Transfer of the Atmosphere
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
url = https://github.com/jararias/pysparta
long_description = file: README.md
long_description_content_type = text/x-markdown
license = CC BY-NC-SA 4.0
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
packages = find_namespace:
package_dir =
    = .

[options.packages.find]
where = .

[options.package_data]
pysparta.atmoslib.merra2_lta_data =
    *.bl2
    *.json
